# ansys-tools-repo-sync

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  label.yml  release.yml  style.yml  test.yml
ansys/tools/repo_sync/: __init__.py  __main__.py  _cli.py  _version.py  repo_sync.py
doc/: .vale.ini  Makefile
doc/changelog.d/: 10012.dependencies.md  10254.dependencies.md  10377.dependencies.md  10378.dependencies.md  10520.dependencies.md  10521.dependencies.md  10673.dependencies.md  10746.dependencies.md  10809.dependencies.md  10868.dependencies.md  10996.dependencies.md  11058.dependencies.md  11210.dependencies.md  11297.dependencies.md  11500.dependencies.md  11730.dependencies.md  11879.added.md  12063.dependencies.md  12064.dependencies.md  12205.dependencies.md  9713.added.md  9878.maintenance.md  9922.fixed.md  9970.maintenance.md
doc/source/: changelog.rst  conf.py  index.rst
doc/source/_autoapi_templates/: index.rst
doc/source/_templates/: README.md
doc/styles/Vocab/ANSYS/: accept.txt
doc/styles/config/vocabularies/ANSYS/: accept.txt
src/ansys/api/test/v0/: hello_world.py  test.proto
src/ansys/tools/repo_sync/: __init__.py  __main__.py  constants.py  repo_sync.py  repo_sync_v2.py
tests/: __init__.py  conftest.py  test.py  test_sync.py  test_workflow.py
tests/assets/: manifest.txt  manifest_no_files.txt  manifest_proto_and_init.txt
tests/assets/ansys/api/test/v0/: hello_world.py
version/: index.html
version/1.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/1.0/_sources/: index.rst.txt
version/1.0/_sources/autoapi/: index.rst.txt
version/1.0/_sources/autoapi/ansys/tools/repo_sync/: index.rst.txt
version/1.0/_sources/autoapi/ansys/tools/repo_sync/__main__/: index.rst.txt
version/1.0/_sources/autoapi/ansys/tools/repo_sync/repo_sync/: index.rst.txt
version/1.0/autoapi/: announcement.html  index.html
version/1.0/autoapi/ansys/tools/repo_sync/: index.html
version/1.0/autoapi/ansys/tools/repo_sync/__main__/: index.html
version/1.0/autoapi/ansys/tools/repo_sync/repo_sync/: index.html
version/1.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
version/1.1/_static/: README.md
version/1.1/autoapi/: announcement.html  index.html
version/1.1/autoapi/ansys/tools/repo_sync/: index.html
version/1.1/autoapi/ansys/tools/repo_sync/__main__/: index.html
version/1.1/autoapi/ansys/tools/repo_sync/repo_sync/: index.html
version/1.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/1.2/_sources/autoapi/ansys/tools/repo_sync/: index.rst.txt
version/1.2/_sources/autoapi/ansys/tools/repo_sync/__main__/: index.rst.txt
version/1.2/_sources/autoapi/ansys/tools/repo_sync/repo_sync/: index.rst.txt
version/1.2/autoapi/: index.html
version/1.2/autoapi/ansys/tools/repo_sync/: index.html
version/1.2/autoapi/ansys/tools/repo_sync/__main__/: index.html
version/1.2/autoapi/ansys/tools/repo_sync/repo_sync/: index.html
version/1.3/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/1.3/_sources/autoapi/ansys/tools/repo_sync/: index.rst.txt
version/1.3/_sources/autoapi/ansys/tools/repo_sync/repo_sync/: index.rst.txt
version/1.3/_static/: search.json
version/1.3/autoapi/: index.html
version/1.3/autoapi/ansys/tools/repo_sync/: index.html
version/1.3/autoapi/ansys/tools/repo_sync/repo_sync/: index.html
version/1.4/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/1.4/_sources/api/ansys/tools/repo_sync/: index.rst.txt
version/1.4/_sources/api/ansys/tools/repo_sync/__main__/: index.rst.txt
version/1.4/_sources/api/ansys/tools/repo_sync/repo_sync/: index.rst.txt
version/1.4/api/: index.html
version/1.4/api/ansys/tools/repo_sync/: index.html
version/1.4/api/ansys/tools/repo_sync/repo_sync/: index.html
version/1.5/: index.html  objects.inv  py-modindex.html  search.html
version/1.5/_sources/api/ansys/tools/repo_sync/repo_sync/: index.rst.txt
version/1.5/api/ansys/tools/repo_sync/repo_sync/: index.html
version/dev/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/autoapi/ansys/tools/repo_sync/: index.rst.txt
version/dev/_sources/autoapi/ansys/tools/repo_sync/repo_sync/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/ansys/tools/repo_sync/: index.html
version/dev/api/ansys/tools/repo_sync/__main__/: index.html
version/dev/api/ansys/tools/repo_sync/constants/: index.html
version/dev/api/ansys/tools/repo_sync/repo_sync/: index.html
version/dev/autoapi/: index.html
version/dev/autoapi/ansys/tools/repo_sync/: index.html
version/dev/autoapi/ansys/tools/repo_sync/__main__/: index.html
version/dev/autoapi/ansys/tools/repo_sync/repo_sync/: index.html
version/stable/: changelog.html  genindex.html  index.html  search.html  searchindex.js
version/stable/_sources/: index.rst.txt
version/stable/_sources/api/: index.rst.txt
version/stable/_sources/api/ansys/tools/repo_sync/constants/: index.rst.txt
version/stable/_static/: search.json
version/stable/api/: index.html
version/stable/api/ansys/tools/repo_sync/: index.html
version/stable/api/ansys/tools/repo_sync/__main__/: index.html
version/stable/api/ansys/tools/repo_sync/constants/: index.html
version/stable/autoapi/: index.html
version/stable/autoapi/ansys/tools/repo_sync/: index.html
version/stable/autoapi/ansys/tools/repo_sync/__main__/: index.html
