[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-tools-repo-sync"
version = "1.3.dev0"
description = "Synchronize the content of two different repositories."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0.4",
    "PyGithub>=1.58",
    "gitpython>=3.1",
]

[project.optional-dependencies]
tests = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "click==8.1.7",
    "PyGithub==2.3.0",
    "gitpython==3.1.43",
]
doc = [
    "ansys-sphinx-theme==0.16.6",
    "numpydoc==1.7.0",
    "sphinx==7.3.7",
    "sphinx-autoapi==3.1.2",
    "sphinx-autodoc-typehints==2.2.2",
    "sphinx-copybutton==0.5.2",
]

[tool.flit.module]
name = "ansys.tools.repo_sync"

[project.scripts]
repo-sync = "ansys.tools.repo_sync.__main__:synchronize"

[project.urls]
Source = "https://github.com/ansys/ansys-tools-repo-sync"
Tracker = "https://github.com/ansys/ansys-tools-repo-sync/issues"
Homepage = "https://github.com/ansys/ansys-tools-repo-sync"

[tool.codespell]
skip="*.pyc,*.xml,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./docs/build/*,./docs/images/*,./dist/*,*~,.hypothesis*,./docs/source/examples/*,*cover,*.dat,*.mac"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = true
ignore_missing_imports = true
